e2e/tests/integration/request-routing/deploy/networking.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: webpage
spec:
  host: webpage
  subsets:
    - name: blue
      labels:
        app: webpage
        version: blue
    - name: red
      labels:
        app: webpage
        version: red
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: webpage-north-south
spec:
  gateways:
    - webpage
  hosts:
    - webpage.lvh.me
  http:
    - match:
        - headers:
            X-CharlesCD-Ring:
              exact: 9d22edc0-db79-412e-9e4d-d420ec5826d0
      route:
        - destination:
            host: webpage
            subset: blue
    - route:
        - destination:
            host: webpage
            subset: red
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: webpage-east-west
spec:
  hosts:
    - webpage
  http:
    - match:
        - headers:
            X-CharlesCD-Ring:
              exact: 9d22edc0-db79-412e-9e4d-d420ec5826d0
      route:
        - destination:
            host: webpage
            subset: blue
    - route:
        - destination:
            host: webpage
            subset: red
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: webpage
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - webpage.lvh.me
      port:
        name: http
        number: 80
        protocol: HTTP
