e2e/tests/integration/request-routing/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webpage
spec:
  selector:
    app: webpage
  ports:
    - port: 80
      name: http
  type: NodePort
